<resources>
    <string name="app_name">Greenie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_feedback">Feedback</string>

    <string name="menu_home">Home</string>
    <string name="menu_news_and_events">News &amp; events</string>
    <string name="menu_recycle_center_locations">Recycle center locations</string>
    <string name="menu_information">Information</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
