<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news_and_events"
            android:icon="@drawable/ic_menu_news_and_events"
            android:title="@string/menu_news_and_events" />
        <item
            android:id="@+id/nav_recycle_center_locations"
            android:icon="@drawable/ic_menu_recycle_center_locations"
            android:title="@string/menu_recycle_center_locations" />
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_menu_information"
            android:title="@string/menu_information" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
